--- a/jobs/job_1sb.yaml
+++ b/jobs/job_1sb.yaml
@@ -2,7 +2,9 @@ ms_array:
   - class: Directory
     path:  ../data/L591513_SB000_uv_delta_t_4.MS/
 
-n_channels: 2
+avg.freqstep: 2 
+avg.timestep: 2
+flag.baseline: "[ CS013HBA* ]"
 
 reference_station: CS001HBA0
 
