--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-cwlref-runner
+#cwlref-runner
 html5lib
-toil[cwl]
+-e git://github.com/BD2KGenomics/toil.git@4c234e6b793737e9fa88019941241062b30c97c7#egg=toil[cwl]
+boto
+pycrypto
