--- a/steps/fitclock.cwl.in
+++ b/steps/fitclock.cwl.in
@@ -1,6 +1,6 @@
 cwlVersion: v1.0
 class: CommandLineTool
-baseCommand: [python, /usr/lib/prefactor/scripts/fit_clocktec_initialguess_losoto.py]
+baseCommand: [CMD_PREFIXpython, /usr/lib/prefactor/scripts/fit_clocktec_initialguess_losoto.py]
 
 hints:
   DockerRequirement:
