--- a/steps/createmap_cal.cwl.in
+++ b/steps/createmap_cal.cwl.in
@@ -29,7 +29,7 @@
 
 cwlVersion: v1.0
 class: CommandLineTool
-baseCommand: [python,
+baseCommand: [CMD_PREFIXpython,
              /usr/lib/python2.7/dist-packages/lofarpipe/recipes/plugins/PipelineStep_createMapfile.py,
              createmap_cal.mapfile]
 
