--- a/steps/examine-npys.cwl.in
+++ b/steps/examine-npys.cwl.in
@@ -1,6 +1,6 @@
 cwlVersion: v1.0
 class: CommandLineTool
-baseCommand: [python, /usr/lib/prefactor/scripts/examine_npys.py]
+baseCommand: [CMD_PREFIXpython, /usr/lib/prefactor/scripts/examine_npys.py]
 
 hints:
   DockerRequirement:
