--- a/steps/h5imp_cal.cwl.in
+++ b/steps/h5imp_cal.cwl.in
@@ -1,6 +1,6 @@
 cwlVersion: v1.0
 class: CommandLineTool
-baseCommand: [python, /usr/lib/prefactor/scripts/losotoImporter.py, losoto.h5]
+baseCommand: [CMD_PREFIXpython, /usr/lib/prefactor/scripts/losotoImporter.py, losoto.h5]
 
 hints:
   DockerRequirement:
