--- a/steps/phase.cwl.in
+++ b/steps/phase.cwl.in
@@ -6,7 +6,7 @@
 cwlVersion: v1.0
 class: CommandLineTool
 
-baseCommand: python
+baseCommand: [CMD_PREFIXpython]
 requirements:
   - class: InlineJavascriptRequirement
   - class: EnvVarRequirement
