Add step labels

--- a/steps/ndppp_prep_cal.cwl.in
+++ b/steps/ndppp_prep_cal.cwl.in
@@ -22,6 +22,8 @@ cwlVersion: v1.0
 class: CommandLineTool
 baseCommand: [CMD_PREFIXNDPPP, msout=calibrated.MS]
 
+label: "DPPP flag and average"
+
 hints:
   DockerRequirement:
       dockerImageId: kernsuite/prefactor
