--- a/steps/phase.cwl.in
+++ b/steps/phase.cwl.in
@@ -7,6 +7,9 @@ cwlVersion: v1.0
 class: CommandLineTool
 
 baseCommand: [CMD_PREFIXpython]
+
+label: "Find global phase offset"
+
 requirements:
   - class: InlineJavascriptRequirement
   - class: EnvVarRequirement
