--- a/steps/ampl.cwl.in
+++ b/steps/ampl.cwl.in
@@ -2,6 +2,8 @@ cwlVersion: v1.0
 class: CommandLineTool
 baseCommand: [CMD_PREFIXpython, /usr/lib/prefactor/scripts/amplitudes_losoto_3.py]
 
+label: "Smooth amplitudes"
+
 hints:
   DockerRequirement:
       dockerImageId: kernsuite/prefactor
