--- a/steps/calib_cal.cwl.in
+++ b/steps/calib_cal.cwl.in
@@ -31,6 +31,8 @@ cwlVersion: v1.0
 class: CommandLineTool
 baseCommand: [CMD_PREFIX/usr/bin/calibrate-stand-alone]
 
+label: "BBS calibrate"
+
 hints:
   DockerRequirement:
       dockerImageId: kernsuite/prefactor
