--- a/steps/fitclock.cwl.in
+++ b/steps/fitclock.cwl.in
@@ -2,6 +2,8 @@ cwlVersion: v1.0
 class: CommandLineTool
 baseCommand: [CMD_PREFIXpython, /usr/lib/prefactor/scripts/fit_clocktec_initialguess_losoto.py]
 
+label: "Separate clock/TEC"
+
 hints:
   DockerRequirement:
       dockerImageId: kernsuite/prefactor
