--- a/steps/h5imp_cal.cwl.in
+++ b/steps/h5imp_cal.cwl.in
@@ -2,6 +2,8 @@ cwlVersion: v1.0
 class: CommandLineTool
 baseCommand: [CMD_PREFIXpython, /usr/lib/prefactor/scripts/losotoImporter.py, losoto.h5]
 
+label: "Convert solutions to H5parm"
+
 hints:
   DockerRequirement:
       dockerImageId: kernsuite/prefactor
