--- a/steps/plot_cal_phases.cwl.in
+++ b/steps/plot_cal_phases.cwl.in
@@ -22,6 +22,8 @@ class: CommandLineTool
 
 baseCommand: [CMD_PREFIXlosoto]
 
+label: "Plot raw calibration results"
+
 hints:
   DockerRequirement:
       dockerImageId: kernsuite/prefactor
@@ -67,11 +69,13 @@ arguments:
 outputs:
   polXX_dirpointing:
     type: File
+    format: image/png
     outputBinding:
       glob: "cwl_polXX_dirpointing.png"
 
   polYY_dirpointing:
     type: File
+    format: image/png
     outputBinding:
       glob: "cwl_polYY_dirpointing.png"
 
