--- a/steps/sky_cal.cwl.in
+++ b/steps/sky_cal.cwl.in
@@ -3,6 +3,8 @@ class: CommandLineTool
 
 baseCommand: [CMD_PREFIXpython]
 
+label: "Find calibrator skymodel"
+
 hints:
   DockerRequirement:
       dockerImageId: kernsuite/prefactor
