--- a/steps/fitclock.cwl.in
+++ b/steps/fitclock.cwl.in
@@ -9,6 +9,7 @@ hints:
 inputs:
   globaldbname:
     type: File
+    format: h5parm
     doc: "input h5 parm file"
     inputBinding:
       position: 1
@@ -25,21 +26,29 @@ arguments:
 outputs:
   dclock_1st:
     type: File
+    format: numpy
+    label: "Clock solutions"
     outputBinding:
       glob: fitted_data_dclock_fitclock_1st.npy
 
   dTEC_1st:
     type: File
+    format: numpy
+    label: "TEC solutions"
     outputBinding:
       glob: fitted_data_dTEC_fitclock_1st.npy
         
   dclock_1st_sm:
     type: File
+    format: numpy
+    label: "Smoothed clock solutions"
     outputBinding:
       glob: fitted_data_dclock_fitclock_1st.sm.npy
 
   dTEC_1st_sm:
     type: File
+    format: numpy
+    label: "Smoothed TEC solutions"
     outputBinding:
       glob: fitted_data_dTEC_fitclock_1st.sm.npy
 
