--- a/steps/ndppp_prep_cal.cwl.in
+++ b/steps/ndppp_prep_cal.cwl.in
@@ -29,6 +29,7 @@ hints:
 inputs:
   msin:
     type: Directory
+    format: measurementset
     inputBinding:
       prefix: "msin="
       separate: False
@@ -158,6 +159,7 @@ inputs:
 outputs:
   msout:
     type: Directory
+    format: measurementset
     outputBinding:
       glob: "calibrated.MS"
 
