--- a/steps/fitclock.cwl.in
+++ b/steps/fitclock.cwl.in
@@ -9,7 +9,7 @@ hints:
 inputs:
   globaldbname:
     type: File
-    format: h5parm
+    format: http://revoltek.github.io/losoto/cookbook.pdf
     doc: "input h5 parm file"
     inputBinding:
       position: 1
