--- a/steps/plot_cal_phases.cwl.in
+++ b/steps/plot_cal_phases.cwl.in
@@ -54,7 +54,7 @@ requirements:
 inputs:
   h5parm:
     type: File
-    format: h5parm
+    format: http://revoltek.github.io/losoto/cookbook.pdf
     inputBinding:
       position: 1
 
