move Dockerfile for faster builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_install:
   - true
 install:
-  - docker build -t prefactor .
+  - make docker
   - make no-singularity
 before_script:
   - git clone https://github.com/common-workflow-language/schema_salad.git salad && cd ./salad && pip install . --user && cd ..
