--- a/steps/ampl.cwl.in
+++ b/steps/ampl.cwl.in
@@ -36,7 +36,7 @@ arguments:
 outputs:
   amplitude_array:
     type: File
-    format: numpy
+    format: https://docs.scipy.org/doc/numpy-dev/neps/npy-format.html
     label: "Smoothed amplitudes"
     outputBinding:
       glob: "fitclock_amplitude_array.npy"
