--- a/jobs/job_1sb.yaml
+++ b/jobs/job_1sb.yaml
@@ -1,6 +1,7 @@
 ms_array:
   - class: Directory
     path:  ../data/L591513_SB000_uv_delta_t_4.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
 
 avg.freqstep: 2 
 avg.timestep: 2
