--- a/jobs/job_20sb.yaml
+++ b/jobs/job_20sb.yaml
@@ -1,44 +1,64 @@
 ms_array:
   - class: Directory
     path: ../data/L570745_SB000_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB001_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB002_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB003_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB004_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB005_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB006_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB007_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB008_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB009_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB010_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB011_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB012_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB013_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB014_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB015_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB016_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB017_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB018_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
   - class: Directory
     path: ../data/L570745_SB019_uv_first10.MS/
+    format: https://casacore.github.io/casacore-notes/229.html
 
 reference_station: CS001HBA0
 
