--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM kernsuite/base:3
-RUN docker-apt-install lofar prefactor python-pip
+RUN docker-apt-install lofar prefactor python-pip libcasa-derivedmscal2
 RUN pip --no-cache-dir install html5lib "toil[cwl]"
 COPY InitSubtract_deep_sort_and_compute.patch /root/ 
 RUN cd /usr/lib/prefactor/scripts/ && patch -b -z .bak InitSubtract_deep_sort_and_compute.py /root/InitSubtract_deep_sort_and_compute.patch
