--- a/jobs/job_1sb.yaml
+++ b/jobs/job_1sb.yaml
@@ -9,3 +9,8 @@ flag.baseline: "[ CS013HBA* ]"
 
 reference_station: CS001HBA0
 
+numcpu: 64
+mem_pct: 95
+maxlambda_lowres: 2000
+cellsize_lowres_deg: 0.00694
+image_padding: 1.4
