Getting patch directly from github
  This is cleaner since it uses the code from the master branch of
prefactor

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,5 @@
 FROM kernsuite/base:3
-RUN docker-apt-install lofar prefactor python-pip libcasa-derivedmscal2
+RUN docker-apt-install lofar prefactor python-pip libcasa-derivedmscal2 curl
 RUN pip --no-cache-dir install html5lib "toil[cwl]"
-COPY InitSubtract_deep_sort_and_compute.patch /root/ 
-RUN cd /usr/lib/prefactor/scripts/ && patch -b -z .bak InitSubtract_deep_sort_and_compute.py /root/InitSubtract_deep_sort_and_compute.patch
+RUN cd /usr/lib/prefactor/ && curl https://github.com/lofar-astron/prefactor/commit/dd0ec767ca4b20206155bb5100455697c712877b.patch | patch -p1
 ENV PYTHONPATH /usr/lib/prefactor/scripts/
